--- a/restfulapi/src/main/resources/application.properties
+++ b/restfulapi/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-logging.level.org.springframework:debug
-server.servlet.context-path: /rest
+logging.level.org.springframework=debug
+server.servlet.context-path=/rest
