--- a/restfuljpa/src/main/resources/application.properties
+++ b/restfuljpa/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.servlet.context-path = /restfuljpa
 spring.jpa.show-sql = true
 spring.h2.console.enabled = true
-logging.level.org.springframework = debug
+#logging.level.org.springframework = debug
+#logging.level.root=WARN
