--- a/restfulapi/src/main/resources/application.properties
+++ b/restfulapi/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 server.servlet.context-path = /restapi
 management.endpoints.web.exposure.include  = * 
 spring.jpa.show-sql = true
+
+#URL: http://localhost:8080/restapi/h2-console
+#User: restapi
+#Password: restapipass
 spring.h2.console.enabled = true
